Fix problem with splinkles not showing up

--- a/sass/modules/_breakout.scss
+++ b/sass/modules/_breakout.scss
@@ -14,6 +14,10 @@
 
   & p {
     font-size: inherit;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
 }
